<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
           tools:locale="ru">

    <!-- input & result related strings -->
    <string name="hint_expression">Выражение</string>
    <string name="result_error_generic">Ошибка в выражении</string>
    <string name="result_error_specific">Ошибка (</string>

    <!-- titles -->
    <string name="title_activity_info">Инструкция</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_dialog_format">Формат результата</string>
    <string name="title_dialog_rate">Оценить приложение</string>

    <!-- format labels -->
    <string name="format_hms">ЧЧ:ММ:СС</string>
    <string name="format_ms">ММ:СС</string>
    <string name="format_dhms">ДДd. ЧЧ:ММ:СС</string>
    <string name="format_hms_mod24">[ЧЧ:ММ:СС]mod24</string>
    <string name="format_hm">ЧЧ:ММ</string>

    <string-array name="formats">
        <item>@string/format_dhms</item>
        <item>@string/format_hms</item>
        <item>@string/format_ms</item>
        <item>@string/format_hms_mod24</item>
    </string-array>

    <string-array name="timestamp_formats">
        <item>@string/format_hms</item>
        <item>@string/format_hm</item>
    </string-array>

    <!-- menu actions -->
    <string name="action_vibration_enable">Вибрация</string>
    <string name="action_instructions">Инструкция</string>
    <string name="action_exit">Выход</string>
    <string name="action_rate">Оценить</string>
    <string name="action_settings">Настройки</string>
    <string name="action_privacy_policy">Политика конфиденциальности</string>

    <!-- user notifications -->
    <string name="toast_result_copied">Результат скопирован</string>
    <string name="toast_copy_error">В буфере обмена содержатся неподдерживаемые данные</string>
    <string name="toast_ms">Результат сохранен</string>

    <string name="message_rate_dialog">Хотите перейти в Google Play сейчас?</string>
    <string name="btn_yes">Да</string>
    <string name="btn_no">Нет</string>

    <string name="insert_current_time">Вставить текущее время</string>

    <string name="select_time_format">Выберите формат</string>

    <string-array name="layout_type_items">
        <item>Классическая</item>
        <item>Новая</item>
    </string-array>

    <string-array name="vibration_duration_items">
        <item>Малая</item>
        <item>Средняя</item>
        <item>Большая</item>
    </string-array>

    <string name="pref_vibro_duration">Продолжительность вибрации</string>
    <string name="pref_layout">Раскладка</string>
    <string name="pref_precision">Точность</string>
    <string name="pref_vibro_on">Вибрация включена</string>
    <string name="pref_vibro_off">Вибрация отключена</string>

    <string name="btn_ok">ОК</string>
    <string name="btn_cancel">Отмена</string>

    <string name="action_licenses">Лицензии ПО</string>

    <string name="label_history_empty">История пуста</string>

    <string name="cd_history_toggle">История</string>
    <string name="cd_copy">Скопировать результат</string>
    <string name="cd_menu">Меню</string>
    <string name="toast_result_not_copied">Не удается скопировать результат</string>
    <string name="pref_recalculate">Пересчет результата при смене формата</string>
    <string name="pref_recalculate_on">Пересчет производится</string>
    <string name="pref_recalculate_off">Пересчет не производится</string>

</resources>
