<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    tools:context=".help.HelpActivity">

        <WebView
            android:id="@+id/info_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>
</layout>
