...
    <string name="btn_0" translatable="false">0</string>
    <string name="btn_clr" translatable="false">CLR</string>
    <string name="btn_plus" translatable="false">+</string>
    <string name="btn_minus" translatable="false">-</string>
    <string name="btn_colon" translatable="false">:</string>
    <string name="btn_del" translatable="false">BSP</string>
    <string name="btn_eq" translatable="false">=</string>
    <string name="eq" translatable="false">=</string>
    <string name="btn_mr" translatable="false">MR</string>
    <string name="btn_ms" translatable="false">MS</string>
    <string name="btn_mul" translatable="false">×</string>
    <string name="btn_div" translatable="false">÷</string>
    <string name="btn_dot" translatable="false">.</string>
...
